Started copying astrid layout

--- a/TaskManager/Icm.TaskManager.Web/Content/Site.css
+++ b/TaskManager/Icm.TaskManager.Web/Content/Site.css
@@ -53,3 +53,13 @@ input[type="checkbox"].input-validation-error {
         padding: 10px 15px;
     }
 }
+
+.task {
+    background-color: #ddd;
+    border-left: 4px solid #005bff;
+    margin-top: 4px;
+}
+
+.taskDone {
+    color: red;
+}
