--- a/TaskManager/Icm.TaskManager.Web/Views/Home/_Tasks.cshtml
+++ b/TaskManager/Icm.TaskManager.Web/Views/Home/_Tasks.cshtml
@@ -1,18 +1,21 @@
 ﻿<!-- ko with: tasks -->
-<h2>Tareillas</h2>
-<form data-bind="submit: addTask">
-    <input data-bind="value: newTaskDescription" placeholder="What do you want to do?" />
-    <button type="submit">Add</button>
+<h2 data-bind="text: $data.title"></h2>
+<form data-bind="submit: addTask" class="form-inline" role="form">
+    <div class="form-group">
+        <label class="sr-only" for="newTaskDescription">New task description</label>
+        <input type="text" id="newTaskDescription" data-bind="value: newTaskDescription" placeholder="What do you want to do?" class="form-control" />
+        <button type="button" class="btn btn-primary">Add</button>
+    </div>
 </form>
 <div data-bind="foreach: tasks">
-    <hr />
-    <h3 data-bind="text: $data.description"></h3>
-    <p>
-        Id: <span data-bind="text: $data.id"></span>
-        CreatedOn: <span data-bind="text: $data.creationDate"></span>
-        <a data-bind="click: $parent.doneTask">Done</a>
-        <a data-bind="click: $parent.editTask">Edit</a>
-        <a data-bind="click: $parent.deleteTask">Delete</a>   
-     </p>
+    <div class="task">
+        <h3 data-bind="text: $data.description, css: { taskDone: $data.isDone }, title: $data.id"></h3>
+        <p>
+            CreatedOn: <span data-bind="text: $data.creationDate"></span>
+            <button data-bind="click: $parent.doneTask" class="btn btn-success"><span class="glyphicon glyphicon-ok"></span> Done</button>
+            <a data-bind="click: $parent.editTask" class="btn btn-default"><span class="glyphicon glyphicon-pencil"></span> Edit</a>
+            <a data-bind="click: $parent.deleteTask" class="btn btn-danger"><span class="glyphicon glyphicon-remove"></span> Delete</a>
+        </p>
+    </div>
 </div>
 <!-- /ko -->
