--- a/TaskManager/Icm.TaskManager.Web/Views/Home/Index.cshtml
+++ b/TaskManager/Icm.TaskManager.Web/Views/Home/Index.cshtml
@@ -9,7 +9,10 @@
     <title data-bind="text: title"></title>
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <meta name="viewport" content="width=device-width" />
+    @Styles.Render("~/Content/bootstrap")
+    @Styles.Render("~/Content/bootstrap-theme")
     @Styles.Render("~/Content/css")
+
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
@@ -28,37 +31,79 @@
                 </div>
                 <div data-bind="if: loggedIn" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a href="#" data-bind="click: navigateToHome">Home</a></li>
-                        <li><a href="#" data-bind="click: navigateToTasks">Tasks</a></li>
                         <li>@Html.ActionLink("API", "Index", "Help", new { area = "HelpPage" }, null)</li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right" data-bind="with: user">
-                        <li>
-                            <span class="navbar-text nofloat">Hello, <a href="#" class="navbar-link" data-bind="text: name, click: manage"></a>!</span>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span data-bind="text: name, click: manage"></span> <b class="caret"></b></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">Edit profile</a></li>
+                                <li class="divider"></li>
+                                <li><a href="#">Log off</a></li>
+                            </ul>
                         </li>
-                        <li><a href="#" data-bind="click: logOff">Log off</a></li>
                     </ul>
                 </div>
             </div>
         </div>
-        <div data-bind="foreach: errors" class="padding-error">
-            <p class="text-danger" data-bind="text: $data"></p>
+        <div class="row">
+            <div class="col-md-3">
+                <div class="row">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Panel title</h3>
+                        </div>
+                        <div class="panel-body">
+                            <div class="list-group">
+                                <a href="#" class="list-group-item active">Mis tareas</a>
+                                <a href="#" class="list-group-item">Hoy</a>
+                                <a href="#" class="list-group-item">Fuera de listas</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <h2>Listas</h2>
+                    <ul class="list-group">
+                        <li class="list-group-item">
+                            <span class="badge">2</span>
+                            Casa
+                        </li>
+                        <li class="list-group-item">
+                            <span class="badge">0</span>
+                            Personal
+                        </li>
+                        <li class="list-group-item">
+                            <span class="badge">7</span>
+                            Trabajo
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div data-bind="foreach: errors, visible: errors().length > 0" class="alert alert-warning alert-dismissable">
+                    <p class="text-danger" data-bind="text: $data"></p>
+                </div>
+
+                @Html.Partial("_Home")
+                @Html.Partial("_Login")
+                @Html.Partial("_Register")
+                @Html.Partial("_RegisterExternal")
+                @Html.Partial("_Manage")
+                @Html.Partial("_Tasks")
+            </div>
+            <div class="col-md-3">
+                <h2>Actividad</h2>
+            </div>
         </div>
-        @Html.Partial("_Home")
-        @Html.Partial("_Login")
-        @Html.Partial("_Register")
-        @Html.Partial("_RegisterExternal")
-        @Html.Partial("_Manage")
-        @Html.Partial("_Tasks")
-        <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year Ignacio Calvo</p>
         </footer>
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/knockout")
-    @Scripts.Render("~/bundles/app")
-    @Scripts.Render("~/bundles/bootstrap")
+            @Scripts.Render("~/bundles/jquery")
+            @Scripts.Render("~/bundles/knockout")
+            @Scripts.Render("~/bundles/app")
+            @Scripts.Render("~/bundles/bootstrap")
 </body>
 </html>
