--- a/TaskManager/Icm.TaskManager.Web/Views/Home/Index.cshtml
+++ b/TaskManager/Icm.TaskManager.Web/Views/Home/Index.cshtml
@@ -50,34 +50,36 @@
             <div class="col-md-3">
                 <div class="row">
                     <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <h3 class="panel-title">Panel title</h3>
-                        </div>
                         <div class="panel-body">
-                            <div class="list-group">
-                                <a href="#" class="list-group-item active">Mis tareas</a>
-                                <a href="#" class="list-group-item">Hoy</a>
-                                <a href="#" class="list-group-item">Fuera de listas</a>
-                            </div>
+                            <div style="width: 70px; height: 70px; background-color: gray; float: left; margin-right: 10px;"></div>
+                            María del Pozo
+                        </div>
+                        <div class="list-group">
+                            <a href="#" class="list-group-item active">Mis tareas</a>
+                            <a href="#" class="list-group-item">Hoy</a>
+                            <a href="#" class="list-group-item">Fuera de listas</a>
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <h2>Listas</h2>
-                    <ul class="list-group">
-                        <li class="list-group-item">
-                            <span class="badge">2</span>
-                            Casa
-                        </li>
-                        <li class="list-group-item">
-                            <span class="badge">0</span>
-                            Personal
-                        </li>
-                        <li class="list-group-item">
-                            <span class="badge">7</span>
-                            Trabajo
-                        </li>
-                    </ul>
+                    <div class="panel panel-default">
+                        <h2>Listas</h2>
+                        <button type="button" class="btn btn-primary">Añadir lista</button>
+                        <ul class="list-group">
+                            <li class="list-group-item">
+                                <span class="badge">2</span>
+                                Casa
+                            </li>
+                            <li class="list-group-item">
+                                <span class="badge">0</span>
+                                Personal
+                            </li>
+                            <li class="list-group-item">
+                                <span class="badge">7</span>
+                                Trabajo
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
             <div class="col-md-6">
