--- a/TaskManager/Icm.TaskManager.Web/Views/Home/Index.cshtml
+++ b/TaskManager/Icm.TaskManager.Web/Views/Home/Index.cshtml
@@ -105,6 +105,9 @@
 
             @Scripts.Render("~/bundles/jquery")
             @Scripts.Render("~/bundles/knockout")
+            @Html.Action("WebApiDescription", "Metadata")
+            @Scripts.Render("~/bundles/signalr")
+            <script src="/signalr/hubs"></script>
             @Scripts.Render("~/bundles/app")
             @Scripts.Render("~/bundles/bootstrap")
 </body>
