--- a/TaskManager/Icm.TaskManager.Web/Views/Metadata/WebApiDescription.cshtml
+++ b/TaskManager/Icm.TaskManager.Web/Views/Metadata/WebApiDescription.cshtml
@@ -27,8 +27,7 @@
             return $.ajax({
                 type: action.Method,
                 url: url,
-                data: data,
-                contentType: 'application/json'
+                data: data
             });
         };
     });
