--- a/TaskManager/Icm.TaskManager.Web/Views/Home/_Tasks.cshtml
+++ b/TaskManager/Icm.TaskManager.Web/Views/Home/_Tasks.cshtml
@@ -1,4 +1,4 @@
-﻿<!-- ko with: tasks -->
+﻿<!-- ko with: taskList -->
 <h2 data-bind="text: $data.title"></h2>
 <form data-bind="submit: addTask" class="form-inline" role="form">
     <div class="form-group">
@@ -7,13 +7,16 @@
     </div>
     <button type="button" class="btn btn-primary" data-bind="click: addTask">Add</button>
 </form>
-<div data-bind="foreach: tasks">
+<div data-bind="foreach: { data: tasks, beforeRemove: $data.hideTask }">
     <div class="panel panel-default task">
         <div class="panel-heading">
             <h3 data-bind="text: $data.description, css: { taskDone: $data.isDone }, title: $data.id" class="panel-title"></h3>
         </div>
         <div class="panel-body">
-            CreatedOn: <span data-bind="text: $data.creationDate"></span>
+            <p>
+                <small>CreatedOn: <span data-bind="dateString: $data.creationDate"></span></small>
+                <small>Alarm: <span data-bind="dateString: $data.alarmDate"></span></small>
+            </p>
             <button data-bind="click: $parent.doneTask" class="btn btn-success"><span class="glyphicon glyphicon-ok"></span> Done</button>
             <a data-bind="click: $parent.editTask" class="btn btn-default"><span class="glyphicon glyphicon-pencil"></span> Edit</a>
             <a data-bind="click: $parent.deleteTask" class="btn btn-danger"><span class="glyphicon glyphicon-remove"></span> Delete</a>
